# haskell-programming-example

./: LICENSE  README.md  haskell-programming-example.cabal
app/: shift-slice.hs
doc/: haskell-programming-example.md
src/: ShiftSlice.hs
test/: doctesting.hs
