name:                haskell-programming-example
version:             0.1.0.0
synopsis:            Shift Slice Filter
description:         This project is for demonstarating a short haskell programming example.
homepage:            http://github.com/nobsun/haskell-programming-example/
license:             BSD3
license-file:        LICENSE
author:              Nobuo Yamashita
maintainer:          nobsun@sampou.org
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ShiftSlice
  build-depends:       base >=4.8 && <4.9
  default-language:    Haskell2010

executable shift-slice
  hs-source-dirs:      app
  main-is:             shift-slice.hs
  ghc-options:         -rtsopts
  build-depends:       base
                     , haskell-programming-example
  default-language:    Haskell2010
